--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root" class="page"></div>
+    <div id="portal"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
